--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.1",
+    "bootstrap": "^5.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
