--- a/frontend/user/package.json
+++ b/frontend/user/package.json
@@ -13,7 +13,8 @@
     "@fortawesome/fontawesome-free": "^7.0.1",
     "bootstrap": "^5.3.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
