--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,5 +9,9 @@
     "start:user": "cd user && npm run dev",
     "start:admin": "cd admin && npm run dev",
     "start:all": "concurrently \"npm run start:user\" \"npm run start:admin\""
+  },
+  "dependencies": {
+    "axios": "^1.12.2",
+    "react-router-dom": "^7.9.1"
   }
 }
