--- a/frontend/user/package.json
+++ b/frontend/user/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
