--- a/backend/user-service/build.gradle
+++ b/backend/user-service/build.gradle
@@ -24,6 +24,10 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    set('springCloudVersion', "2025.0.0") // ✅ Spring Boot 3.5.x와 호환되는 Spring Cloud 릴리즈 트레인
+}
+
 dependencies {
     // Spring Boot starters
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -45,6 +49,17 @@ dependencies {
     // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
+    // 마이크로 서비스 간 통신 처리
+    implementation("org.springframework.cloud:spring-cloud-starter-openfeign:4.3.0")
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 tasks.named('test') {
