TETO-36 Frontend 마이페이지 추가

--- a/backend/realtime-service/build.gradle
+++ b/backend/realtime-service/build.gradle
@@ -20,6 +20,10 @@ configurations {
     }
 }
 
+ext {
+    set('springCloudVersion', "2025.0.0")
+}
+
 repositories {
     mavenCentral()
 }
@@ -39,6 +43,14 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 tasks.named('test') {
