--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
+    "@stomp/stompjs": "^7.2.0",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.0",
     "react": "^19.1.1",
