--- a/backend/user-service/build.gradle
+++ b/backend/user-service/build.gradle
@@ -43,6 +43,11 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    // JWT
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+
     // Dev tools
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
