--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@stomp/stompjs": "^7.2.0",
     "axios": "^1.12.2",
+    "jwt-decode": "^4.0.0",
     "react-router-dom": "^7.9.1"
   }
 }
