--- a/frontend/user/package.json
+++ b/frontend/user/package.json
@@ -14,6 +14,7 @@
     "@stomp/stompjs": "^7.2.0",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.2",
