--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
+    "@types/sockjs-client": "^1.5.4",
     "concurrently": "^8.2.2"
   },
   "scripts": {
@@ -11,7 +12,10 @@
     "start:all": "concurrently \"npm run start:user\" \"npm run start:admin\""
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.2.0",
     "axios": "^1.12.2",
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3"
   }
 }
