TETO-87 Feature: 매장 등록 및 관리

--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -17,7 +17,8 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.1",
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
