--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@stomp/stompjs": "^7.2.0",
     "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
     "jwt-decode": "^4.0.0",
     "react-router-dom": "^7.9.1",
     "sockjs-client": "^1.6.1",
