TETO-92 어드민 측 웨이팅 목록 조회, 웨이팅 취소 기능 구현

--- a/backend/realtime-service/build.gradle
+++ b/backend/realtime-service/build.gradle
@@ -59,6 +59,9 @@ dependencies {
 
     //jackson
     implementation("com.fasterxml.jackson.core:jackson-databind:2.18.4")
+
+    //페이징
+    implementation 'org.modelmapper:modelmapper:3.1.1'
 }
 
 dependencyManagement {
