--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "@stomp/stompjs": "^7.2.0",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
+    "react-datepicker": "^8.7.0",
     "react-router-dom": "^7.9.1",
     "react-time-picker": "^8.0.2",
     "sockjs-client": "^1.6.1",
