--- a/frontend/user/package.json
+++ b/frontend/user/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.2",
     "sockjs-client": "^1.6.1"
