--- a/.gitignore
+++ b/.gitignore
@@ -210,6 +210,10 @@ summary*.md
 *.log
 tmp/
 
-# npm config files
-package.json
+# 패키지 파일 추적 안 함
+frontend/admin/package-lock.json
+frontend/admin/package.json
+frontend/user/package-lock.json
+frontend/user/package.json
 package-lock.json
+package.json
