--- a/backend/restaurant-service/build.gradle
+++ b/backend/restaurant-service/build.gradle
@@ -1,14 +1,12 @@
-// ========= restaurant-service application.properties =========
-
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.5.6'
+    id 'org.springframework.boot' version '3.5.6' // 최신 유지
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.tabletopia'
 version = '0.0.1-SNAPSHOT'
-description = 'restaurant-service'
+description = 'tabletopia-service'
 
 java {
     toolchain {
@@ -27,34 +25,46 @@ repositories {
 }
 
 ext {
-    set('springCloudVersion', "2025.0.0")
+    set('springCloudVersion', "2025.0.0") // Spring Boot 3.5.x 호환
 }
 
 dependencies {
-    // Web + JPA
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    // ========= Spring Boot Starters =========
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-websocket'
-    //페이징
-    implementation 'org.modelmapper:modelmapper:3.1.1'
-    //jackson
-    implementation("com.fasterxml.jackson.core:jackson-databind:2.18.4")
-    implementation 'org.springframework.session:spring-session-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.springframework.session:spring-session-data-redis'
+
+    // ========= DB =========
     runtimeOnly 'com.mysql:mysql-connector-j'
 
+    // ========= JWT =========
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 직렬화용
+
+    // ========= 기타 유틸 =========
+    implementation 'org.modelmapper:modelmapper:3.1.1' // DTO <-> Entity 매핑
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.4' // JSON 파싱
+
+    // ========= Lombok =========
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    // ========= 개발 편의 =========
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+    // ========= 테스트 =========
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 처리용
+    //페이징
+    implementation 'org.modelmapper:modelmapper:3.1.1'
 }
 
 dependencyManagement {
