--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^7.0.1",
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@stomp/stompjs": "^7.2.0",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.13.1",
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
