TETO-95 Feature: 이미지 등록 및 관리

--- a/backend/restaurant-service/build.gradle
+++ b/backend/restaurant-service/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.5.6' // 최신 유지
     id 'io.spring.dependency-management' version '1.1.7'
+    id 'org.jetbrains.kotlin.jvm'
 }
 
 group = 'com.tabletopia'
@@ -65,6 +66,7 @@ dependencies {
 
     //페이징
     implementation 'org.modelmapper:modelmapper:3.1.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 dependencyManagement {
