--- a/backend/restaurant-service/build.gradle
+++ b/backend/restaurant-service/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.5.6' // 최신 유지
@@ -39,13 +40,18 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.springframework.session:spring-session-data-redis'
 
-    // ========= DB =========
     runtimeOnly 'com.mysql:mysql-connector-j'
 
     // ========= JWT =========
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 직렬화용
+
+    // ========= Querydsl =========
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
     // ========= 기타 유틸 =========
     implementation 'org.modelmapper:modelmapper:3.1.1' // DTO <-> Entity 매핑
@@ -62,10 +68,28 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation("it.ozimov:embedded-redis:0.7.2")
 
     //페이징
     implementation 'org.modelmapper:modelmapper:3.1.1'
+
 }
+
+// ========= Querydsl 설정 ===========
+def querydslDir = "src/main/generated"
+
+sourceSets {
+    main.java.srcDirs += [ querydslDir ]
+}
+
+tasks.withType(JavaCompile) {
+    options.generatedSourceOutputDirectory = file(querydslDir)
+}
+
+clean {
+    delete file(querydslDir)
+}
+// =========  ===========
 
 dependencyManagement {
     imports {
@@ -73,6 +97,7 @@ dependencyManagement {
     }
 }
 
-tasks.named('test') {
+
+tasks.named('test', Test) {
     useJUnitPlatform()
 }
