--- a/backend/restaurant-service/build.gradle
+++ b/backend/restaurant-service/build.gradle
@@ -74,6 +74,11 @@ dependencies {
 
     //페이징
     implementation 'org.modelmapper:modelmapper:3.1.1'
+
+    // ========= OpenAI 연동 =========
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'org.json:json:20231013'
+
 }
 
 // ========= Querydsl 설정 ===========
