--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,17 +8,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     
-    steps:
-    - name: Deploy to Server
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USER }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-      script: |
-        cd ~/Tabletopia
-        git fetch origin
-        git checkout deploy
-        git reset --hard origin/deploy
-        docker-compose down
-        docker-compose up -d --build
+    steps:  # ← 이 줄이 deploy job 안에 들어가야 함! 스페이스 4칸
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd ~/Tabletopia
+            git fetch origin
+            git checkout deploy
+            git reset --hard origin/deploy
+            docker-compose down
+            docker-compose up -d --build
